Changes images path to relative

--- a/css/additional.css
+++ b/css/additional.css
@@ -1,5 +1,5 @@
 .intro{
-    background: url("/images/gruntjs.png") no-repeat scroll 0 0 transparent;
+    background: url("../images/gruntjs.png") no-repeat scroll 0 0 transparent;
     margin-left: -74px !important;
     padding-left: 228px !important;
     padding-top: 30px !important;
